
- Fixed empty (zero column) sqlite inserts, allowing inserts on
  autoincrementing single column tables.

- Added contains operator (which generate a "LIKE %<other>%" clause).

- fixed expression translation of text() clauses; this repairs various
  ORM scenarios where literal text is used for SQL expressions

- sqlite will reflect "DECIMAL" as a numeric column.

- Made access dao detection more reliable [ticket:828]

- Removed unused util.hash().

- removed ClauseParameters object; compiled.params returns a regular dictionary
  now, as well as result.last_inserted_params()/last_updated_params().
  
- fixed INSERT statements w.r.t. primary key columns that have SQL-expression
  based default generators on them; SQL expression executes inline as normal
  but will not trigger a "postfetch" condition for the column, for those DB's
  who provide it via cursor.lastrowid

- Renamed the Dialect attribute 'preexecute_sequences' to
  'preexecute_pk_sequences'.  An attribute proxy is in place for out-of-tree
  dialects using the old name.

- orm:
    - Mapped classes may now define __eq__, __hash__, and __nonzero__ methods
      with arbitrary sementics.  The orm now handles all mapped instances on
      an identity-only basis. (e.g. 'is' vs '==') [ticket:676]

    - deferred column attributes no longer trigger a load operation when the
      attribute is assigned to.  in those cases, the newly assigned
      value will be present in the flushes' UPDATE statement unconditionally.
      
    - de-cruftified backref configuration code, backrefs which step on existing
      properties now raise an error [ticket:832]

    - improved behavior of add_property() etc., fixed [ticket:831] involving
      synonym/deferred

    - fixed clear_mappers() behavior to better clean up after itself

    - fix to "row switch" behavior, i.e. when an INSERT/DELETE is combined into a
      single UPDATE; many-to-many relations on the parent object update properly. 
      [ticket:841]
